--- a/index.html
+++ b/index.html
@@ -20,19 +20,34 @@
 <!--CONTENT-->
 <section class="slide-home">
 	<div class="slide-home__img">
-		<a href="#"><img src="images/bann1.jpg"></a>
+		<a href="#">
+			<img src="images/bann1.jpg" class="img-lg">
+			<img src="images/bann1.jpg" class="img-xs">
+		</a>
 	</div>
 	<div class="slide-home__img">
-		<a href="#"><img src="images/bann2.jpg"></a>
+		<a href="#">
+			<img src="images/bann2.jpg" class="img-lg">
+			<img src="images/bann2.jpg" class="img-xs">
+		</a>
 	</div>
 	<div class="slide-home__img">
-		<a href="#"><img src="images/bann3.jpg"></a>
+		<a href="#">
+			<img src="images/bann3.jpg" class="img-lg">
+			<img src="images/bann3.jpg" class="img-xs">
+		</a>
 	</div>
 	<div class="slide-home__img">
-		<a href="#"><img src="images/bann4.jpg"></a>
+		<a href="#">
+			<img src="images/bann4.jpg" class="img-lg">
+			<img src="images/bann4.jpg" class="img-xs">
+		</a>
 	</div>
 	<div class="slide-home__img">
-		<a href="#"><img src="images/bann5.jpg"></a>
+		<a href="#">
+			<img src="images/bann5.jpg" class="img-lg">
+			<img src="images/bann5.jpg" class="img-xs">
+		</a>
 	</div>
 </section>
 
@@ -81,13 +96,22 @@
 		</div>
 		<div class="banner-down">
 			<div class="banner-down__full">
-				<a href="#"><img src="images/bann1-section.jpg"></a>
+				<a href="#">
+					<img src="images/bann1-section.jpg" class="img-lg">
+					<img src="images/bann1-section-xs.jpg" class="img-xs">
+				</a>
 			</div>
 			<div class="banner-down__half">
-				<a href="#"><img src="images/bann2-section.jpg"></a>
+				<a href="#">
+					<img src="images/bann2-section.jpg" class="img-lg">
+					<img src="images/bann2-section-xs.jpg" class="img-xs">
+				</a>
 			</div>
 			<div class="banner-down__half">
-				<a href="#"><img src="images/bann3-section.jpg"></a>
+				<a href="#">
+					<img src="images/bann3-section.jpg" class="img-lg">
+					<img src="images/bann3-section-xs.jpg" class="img-xs">
+				</a>
 			</div>
 		</div>
 	</div>
