nuevo header y loader

--- a/index.html
+++ b/index.html
@@ -17,6 +17,124 @@
 </head>
 <body>
 
+<!--LOADER-->
+<section class="cont-loader">
+	<div class="cont-loader__content">
+		<img src="images/logo.svg">
+	</div>
+</section>
+<!--/LOADER-->
+
+<header>
+	<section class="pre-head">
+		<div class="container">
+			<div class="pre-head-nav">
+				<div class="pre-head-nav__left">
+					<ul>
+						<li><a href="#">Venta telefónica</a></li>
+						<li><a href="#">Venta empresa</a></li>
+					</ul>
+				</div>
+				<div class="pre-head-nav__right">
+					<ul>
+						<li class="check-tracking">
+							<span>Sigue el estado de tu pedido</span>
+							<a href="#">Aquí</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="mid-head">
+		<div class="container">
+			<div class="middle-nav">
+				<div class="middle-nav__logo">
+					<a href="#" class="head-logo"><img src="images/logo.svg"></a>
+				</div>
+				<div class="middle-nav__search">
+					<form action="#">
+						<div class="head-search">
+							<input type="text" placeholder="¿Qué estás buscando?">
+						</div>
+					</form>
+				</div>
+				<div class="middle-nav__login">
+					<ul class="head-nav-cart">
+						<li class="head-nav-cart__item head-nav-cart__item--login">
+							<a href="#">
+								<span>Iniciar sesión</span>
+							</a>
+						</li>
+						<li class="head-nav-cart__item head-nav-cart__item--register">
+							<a href="#">
+								<span>Regístrate</span>
+							</a>
+						</li>
+						<li class="head-nav-cart__item">
+							<a href="#" class="btn-cart">
+								<span>0</span>
+							</a>
+						</li>
+						<li class="head-nav-cart__item">
+							<div class="btn-menu-xs">
+								<span class="btn-menu-xs__l1"></span>
+								<span class="btn-menu-xs__l2"></span>
+								<span class="btn-menu-xs__l3"></span>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="nav-head">
+		<div class="container">
+			<ul class="menu-head">
+				<li class="menu-head__list">
+					<a href="#"><span>Ofertas</span></a>
+				</li>
+				<li class="menu-head__list">
+					<a href="#"><span>Materiales de construcción</span></a>
+				</li>
+				<li class="menu-head__list">
+					<a href="#"><span>Terminaciones</span></a>
+				</li>
+				<li class="menu-head__list">
+					<a href="#"><span>Herramientas y maquinarias</span></a>
+				</li>
+				<li class="menu-head__list">
+					<a href="#"><span>Gasfitería</span></a>
+				</li>
+				<li class="menu-head__list">
+					<a href="#"><span>Iluminación</span></a>
+				</li>
+				<li class="menu-head__list">
+					<a href="#"><span>Muebles y organización</span></a>
+				</li>
+				<li class="menu-head__list">
+					<a href="#"><span>Decoración y menaje</span></a>
+				</li>
+				<li class="menu-head__list">
+					<a href="#"><span>Electro y línea blanca</span></a>
+				</li>
+				<li class="menu-head__list">
+					<a href="#"><span>Aire libre y jardín</span></a>
+				</li>
+				<li class="menu-head__list">
+					<a href="#"><span>Aseo y limpieza</span></a>
+				</li>
+				<li class="menu-head__list">
+					<a href="#"><span>Automóvil y deportes</span></a>
+				</li>
+				<li class="menu-head__list">
+					<a href="#"><span>Tecnología y entrentención</span></a>
+				</li>
+			</ul>
+		</div>
+	</section>
+</header>
+
 <!--CONTENT-->
 <section class="slide-home">
 	<div class="slide-home__img">
