--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>MIMBRAL</title>
 	<!--FONTS-->
-	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,400;1,700;1,900&display=swap" rel="stylesheet">
 	<!--SLICK-->
 	<link rel="stylesheet" type="text/css" href="css/slick-theme.css">
 	<link rel="stylesheet" type="text/css" href="css/slick.css">
@@ -134,6 +134,66 @@
 		</div>
 	</section>
 </header>
+
+<section class="head-home">
+	<div class="container">
+		<div class="row-head-home">
+			<div class="row-head-home__col">
+				<a href="#" class="btn-head-home">
+					<span class="btn-head-home__icon">
+						<img src="images/icon-head-home1.svg">
+					</span>
+					<span class="btn-head-home__txt">
+						<h3>Horarios y tiendas</h3>
+						<p>Revisa nuestros horarios de atención aquí</p>
+					</span>
+				</a>
+			</div>
+			<div class="row-head-home__col">
+				<a href="#" class="btn-head-home">
+					<span class="btn-head-home__icon">
+						<img src="images/icon-head-home2.svg">
+					</span>
+					<span class="btn-head-home__txt">
+						<h3>Entrega sin contacto</h3>
+						<p>#QuedateEnCasa</p>
+					</span>
+				</a>
+			</div>
+			<div class="row-head-home__col">
+				<a href="#" class="btn-head-home">
+					<span class="btn-head-home__icon">
+						<img src="images/icon-head-home3.svg">
+					</span>
+					<span class="btn-head-home__txt">
+						<h3>Seguimiento de compra</h3>
+						<p>Revisa el estado de tu pedido</p>
+					</span>
+				</a>
+			</div>
+			<div class="row-head-home__col">
+				<a href="#" class="btn-head-home">
+					<span class="btn-head-home__icon">
+						<img src="images/icon-head-home4.svg">
+					</span>
+					<span class="btn-head-home__txt">
+						<h3>Medidas covid-19</h3>
+					</span>
+				</a>
+			</div>
+			<div class="row-head-home__col">
+				<a href="#" class="btn-head-home">
+					<span class="btn-head-home__icon">
+						<img src="images/icon-head-home5.svg">
+					</span>
+					<span class="btn-head-home__txt">
+						<h3>Regala una giftcard</h3>
+					</span>
+				</a>
+			</div>
+		</div>
+	</div>
+</section>
 
 <!--CONTENT-->
 <section class="slide-home">
